# noserde

./: .gitignore  CMakeLists.txt  LICENSE  README.md  brief.md
.github/workflows/: ci.yml
benchmarks/: bitsery_buffer_vs_vector.cpp
cmake/: deps.cmake
examples/: example.h
include/: noserde.hpp
tests/: defaults_schema.h  generator_tests.py  inline_struct_schema.h  inline_struct_schema.h.noserde  nested_union_schema.h  nested_union_schema.h.noserde  pod_schema.h  runtime_bitsery_tests.cpp  runtime_defaults_tests.cpp  runtime_endian_tests.cpp  runtime_inline_struct_tests.cpp  runtime_io_error_tests.cpp  runtime_nested_union_tests.cpp  runtime_pod_tests.cpp  runtime_tests.cpp  test_schema.h  test_schema.h.noserde
tools/: noserde_gen.py
